# Zeroclaw-solana-plugins

./: Cargo.toml  README.md
plugins/lending-health/: Cargo.toml  README.md  manifest.toml
plugins/lending-health/src/: lending-health.rs  lib.rs
plugins/lending-health/tests/: core.rs
plugins/portfolio-brief/: Cargo.toml  README.md  manifest.toml
plugins/portfolio-brief/src/: lib.rs  portfolio-brief.rs
plugins/portfolio-brief/tests/: core.rs
plugins/sns-resolve/: .gitignore  Cargo.toml  README.md  manifest.toml
plugins/sns-resolve/src/: lib.rs  sns-resolve.rs
plugins/sns-resolve/tests/: core.rs
plugins/token-risk-check/: Cargo.toml  README.md  manifest.toml
plugins/token-risk-check/src/: lib.rs  token-risk-check.rs
plugins/token-risk-check/tests/: core.rs
plugins/wallet-narrate/: Cargo.toml  README.md  manifest.toml
plugins/wallet-narrate/src/: lib.rs  wallet-narrate.rs
plugins/wallet-narrate/tests/: core.rs
